fix: Responsiveness and spacing in cluster wizard dialog

--- a/src/components/Clusters/components/AddClusterWizard.scss
+++ b/src/components/Clusters/components/AddClusterWizard.scss
@@ -10,7 +10,7 @@
     left: 0;
     right: 0;
     bottom: 2rem;
-    margin: 0 2rem;
+    margin: 0 4rem;
     display: flex;
     justify-content: flex-end;
     box-sizing: border-box;
